deploy/generated/gateway/authenticated/audit-service-authenticated.yaml
# Code generated by protoc-gen-go-deploy. DO NOT EDIT.
# Source service: audit.v1.AuditService
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audit-service-authenticated
  namespace: "aisphere"
  labels:
    app.kubernetes.io/name: "aisphere-hub"
    app.kubernetes.io/component: "gateway-route"
    aisphere.io/generated-by: "protoc-gen-go-deploy"
    aisphere.io/exposure-bucket: "authenticated"
spec:
  parentRefs:
    - name: "aisphere-gateway"
      namespace: "aisphere"
  rules:
    - matches:
        - method: "GET"
          path:
            type: PathPrefix
            value: "/v1/audit/records"
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Aisphere-Upstream-Operation
                value: "/audit.v1.AuditService/QueryAuditRecords"
              - name: X-Aisphere-Route-Exposure
                value: "AUTHENTICATED"
              - name: X-Aisphere-Route-Authn-Mode
                value: "verify_jwt"
      backendRefs:
        - name: "aisphere-hub"
          namespace: "aisphere"
          port: 18001
